--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <li class="nav-item col-6">
                   <button
                     style="color: #96bb7c"
-                    class="btn d-flex col-11 justify-content-center fw-bold py-3 outlinedbtn"
+                    class="btn d-flex col-11 justify-content-center fw-bold p-0 py-md-3 outlinedbtn"
                   >
                     Login
                   </button>
