--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <a class="nav-link text-secondary" href="#pricing">Pricing</a>
                 </li>
                 <li class="nav-item d-flex">
-                  <a class="nav-link text-secondary" href="contact.html"
+                  <a class="nav-link text-secondary" href="Contact.html"
                     >Contact</a
                   >
                 </li>
