--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <div class="imgleft">
         <div class="text-cubical">
-          Cubical <img src="/assets/cpwrt.svg" alt="c" />
+          Cubical <img src="./assets/cpwrt.svg" alt="c" />
         </div>
         <img
           class="topimg"
