--- a/Contact.html
+++ b/Contact.html
@@ -28,7 +28,7 @@
         <div class="column">
           <nav class="navbar">
             <div class="ul-nav">
-              <div class="li-nav"><a href="#" class="link-nav">Home</a></div>
+              <div class="li-nav"><a href="./index.html" class="link-nav">Home</a></div>
               <div class="li-nav"><a href="#" class="link-nav">Product</a></div>
               <div class="li-nav">
                 <a href="#" class="link-nav"> About Us</a>
